# MonteCarloDiscSim

./: .gitignore  CMakeLists.txt  README.md  compile.sh  rasmol_setup
config/: base_config.cfg
include/: cell.h  movement.h  particles.h  simulation.h  types.h  utils.h
src/: cell.c  cell.cu  cellgen_test.c  main.c  main.cu  movement.c  movement.cu  particles.c  particles.cu  simulation.c  simulation.cu  utils.c  utils.cu
